--- a/src/css/Register.css
+++ b/src/css/Register.css
@@ -1,4 +1,9 @@
 /* Register.css */
+.all{
+  background-color: #171923;
+  width: 100%;
+  height: 100vh;
+}
 .register-form {
   position: absolute;
   top: 50%;
@@ -10,7 +15,7 @@
   background-color: #02001c;
   color: white;
   padding: 20px;
-  box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+  box-shadow: 14px 14px 20px #595e63, -14px -14px 20px rgb(86, 81, 81);
 }
 .logo {
   margin: auto;
