Made an adjustment in the home component

--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -23,3 +23,13 @@
 .text-head-span{
   color: aliceblue;
 }
+.icon{
+  color: aliceblue;
+  font-size: 3rem;
+}
+.down-left{
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  padding-left: 3rem;
+}
