--- a/src/css/Register.css
+++ b/src/css/Register.css
@@ -1,6 +1,7 @@
 /* Register.css */
 .all {
-	background-color: #171923;
+	background-color: rgb(1, 1, 31);
+  background-image: url('../assets/bg.png');
 	width: 100%;
 	height: 100vh;
 }
