--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ header {
 	position: sticky;
 	top: 0;
 	width: 100%;
-	height: 60px;
+	height: 10%;
 	z-index: 1;
 }
 header .menu-icon {
@@ -196,12 +196,22 @@ input:checked + .slider:before {
 /* the toggle button ends */
 /* main-content  */
 .main-content {
-	padding: 3%;
-	width: 70%;
-	margin: 20px auto;
+	margin-top: 10px;
+	text-align: center;
+	position: relative;
+	width: 100%;
+	height: 90%;
+}
+.content {
+	margin-top: 20px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	box-shadow: 0 10px 20px var(--box-shadow);
 	border-radius: 12px 0 12px 0;
-	text-align: center;
+	padding: 3%;
+	width: 70%;
 }
 .main-content h3 {
 	color: var(--orange);
