--- a/src/css/DesignTicket.css
+++ b/src/css/DesignTicket.css
@@ -1,18 +1,3 @@
-.ticket-preview {
-	background-color: red;
-	padding: 20px;
-	border: 1px solid #000;
-	width: 300px;
-	margin-bottom: 20px;
-}
-
-.options {
-	background-color: blue;
-	padding: 20px;
-	border: 1px solid #ccc;
-	width: 300px;
-}
-
 label {
 	display: block;
 	margin-bottom: 5px;
@@ -37,4 +22,45 @@ button {
 	border: none;
 	padding: 10px 20px;
 	cursor: pointer;
+}
+
+.main-content .design {
+	display: flex;
+	align-items: center;
+	margin-top: -10px;
+}
+.main-content .design .options {
+	flex: 0.2;
+	overflow-y: scroll;
+	height: 91vh;
+	text-align: left;
+	background-color: blue;
+	padding: 20px;
+}
+.main-content .design .options::-webkit-scrollbar {
+	width: 3px; /* Width of the scrollbar */
+	border: hidden;
+}
+
+.main-content .design .options::-webkit-scrollbar-track {
+	background: var(--bg-color); /* Color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--orange); /* Color of the thumb */
+	border-radius: 5px; /* Radius of the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #b53f01; /* Color of the thumb on hover */
+}
+.main-content .design .inner {
+	flex: 0.8;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.main-content .design .inner .ticket-preview {
+	width: 80%;
+	padding: 20px;
 }
