--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 	--text-hover: #273c75;
 	--box-shadow: rgba(27, 27, 27, 0.5);
 	--bg-input: #7f8fa6;
+	--bg-design:#90c6f2;
 }
 
 .dark-mode {
@@ -40,6 +41,7 @@
 	--text-hover: #f5f6fa;
 	--box-shadow: rgba(192, 192, 192, 0.5);
 	--bg-input: #ffffff;
+	--bg-design:#40739e;
 }
 
 /* main style  */
