--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ header .menu-icon {
 	display: flex;
 	flex-direction: column;
 	margin-top: 20px;
+	justify-content: center;
 }
 
 .sidebar .nav-links .nav-link {
@@ -116,6 +117,12 @@ header .menu-icon {
 	font-size: 24px;
 }
 @media (max-width: 640px) {
+	.sidebar{
+		flex: 0.4;
+	}
+	.sidebar .nav-links .nav-link{
+		font-size: 14px;
+	}
 	.sidebar-collapsed .nav-links .nav-link {
 		font-size: 16px;
 	}
@@ -204,6 +211,7 @@ input:checked + .slider:before {
 	position: relative;
 	width: 100%;
 	height: 90%;
+	overflow-x: hidden;
 }
 .content {
 	margin-top: 20px;
